--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oficina</title>
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu"/>
 </head>
 <body>
     <header>
         <h1>Oficina Central</h1>
+        <span id="burger" class="material-symbols-outlined">
+menu
+</span>
         <nav id="menu">
-            <button id="ordemServico">Ordem de Serviço</button>
-            <button id="cMaterial">Controle de Material</button>
-            <button id="lMaterial">Lista de Materiais</button>
-            <button id="laudoTec">Laudo Técnico</button>
-            <button id="ajuda">Ajuda</button>
+            <ul>
+                <li><button id="ordemServico">Ordem de Serviço</button></li>
+                <li><button id="cMaterial">Controle de Material</button></li>
+                <li><button id="lMaterial">Lista de Materiais</button></li>
+                <li><button id="laudoTec">Laudo Técnico</button></li>
+                <li><button id="ajuda">Ajuda</button></li>
+            </ul>
         </nav>
     </header>
     <main>
