update ordem de serviço

--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
                     
                     <tr>
                         <th >Código:</th>
-                        <td><input type="number" name="codigoOS" id="" placeholder="Ex.: 123456" maxlength="10" autocomplete="off"></td>
+                        <td><input type="number" name="codigoOS" id="codigoOS" placeholder="Ex.: 123456" maxlength="10" autocomplete="off"></td>
                     </tr>
                     <tr>
                         <th >Descrição:</th>
-                        <td><input type="text" name="descricaoOS" id="" placeholder="Ex.: 2CV / 1750RPM " autocomplete="off"></td>
+                        <td><input type="text" name="descricaoOS" id="descricaoOS" placeholder="Manutenção motor weg" autocomplete="off"></td>
                     </tr>
                     <tr>
                          <th >Status</th>
                         <td>
                             <select name="Status" id="statusOS">
-                                <option value="EmAndamento">Em andamento</option>
+                                <option value="Em andamento">Em andamento</option>
+                                <option value="Concluído">Concluído</option>
                             </select>
                         </td> 
                     </tr>
