--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     </tr>
                 </table>
                 <div id="areabotao">
-                    <input type="submit" value="Cadastrar" id="btnCadastrar">
-                    <input type="reset" value="Limpar" id="btnLimpar">
+                    <input type="submit" value="Cadastrar" id="btnCadastrarMat">
+                    <input type="reset" value="Limpar" id="btnLimparMat">
                 </div>
             </div>
            
